--- a/login.html
+++ b/login.html
@@ -3,26 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Winners Play - Login</title>
+  <title>Login - Winners Play</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h2 style="margin-top:40px;">Login to Winners Play</h2>
+<h2 style="margin-top:40px;">Login to Winners Play</h2>
 
-  <input id="username" placeholder="Username">
-  <input id="password" placeholder="Password" type="password">
+<input id="username" placeholder="Username">
+<input id="password" type="password" placeholder="Password">
 
-  <button onclick="login()">Login</button>
-  <button onclick="registerUser()">Register</button>
+<button onclick="login()">Login</button>
+<button onclick="registerUser()">Register</button>
 
-  <p id="msg"></p>
+<p id="msg"></p>
 
-  <p style="margin-top:30px;font-size:14px;color:#888;">
-    Default admin: <b>admin / admin123</b><br>
-    Default user: <b>user1 / 1234</b>
-  </p>
+<p style="margin-top:20px; font-size:14px; color:#aaa;">
+Default Admin → <b>admin / admin123</b><br>
+Default User → <b>user1 / 1234</b>
+</p>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
